<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_bottom_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/other_type_login"
        android:textColor="#333333"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/other_type_login_dialog_tik_tok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_93"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:scaleType="center"
            android:src="@mipmap/login_type_tik_tok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tik_tok_type_login"
            android:textColor="#333333"
            android:layout_marginLeft="@dimen/dp_15"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_238"
        android:background="#6E7F89" />

    <TextView
        android:id="@+id/other_type_login_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_239"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#333333"
        android:textSize="17sp" />
</FrameLayout>