<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/verify_code_fragment_back"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:scaleType="center"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@mipmap/login_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:text="@string/edit_verify_code"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="30sp"
        android:textStyle="" />

    <TextView
        android:id="@+id/verify_code_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_14"
        android:padding="@dimen/dp_2"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="15sp"
        tools:text="@string/verify_code_hint" />

    <com.wantupai.advertisements.login.view.VerifyCodeEdit
        android:id="@+id/verify_code_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="17sp"
        app:codeLength="4"
        app:editBackground="@drawable/bg_verify_phone_number_edit"
        app:editHeight="@dimen/dp_50"
        app:editMargin="@dimen/dp_15"
        app:editWidth="@dimen/dp_50" />

    <TextView
        android:id="@+id/retry_send_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_2"
        android:text="@string/retry_send_verify_code"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="15sp" />
</LinearLayout>