<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_32"
            android:src="@mipmap/main_logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/qmui_config_color_white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_en_name"
                android:textColor="#B9D2E0"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/main_user_avatar"
            android:layout_width="@dimen/dp_21"
            android:layout_height="@dimen/dp_21"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/main_user_default_avatar" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/main_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_63"
                    android:layout_marginTop="@dimen/dp_20"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main_fast_production_video"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/btn_fast_production_video"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:src="@mipmap/main_fast_production_video" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_1"
                            android:text="@string/fast_production_video"
                            android:textColor="@color/qmui_config_color_white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_import_video"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_weight="1"
                        android:background="@drawable/btn_main_option"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:src="@mipmap/main_import_video" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/import_video"
                            android:textColor="#333333"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_63"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main_take_video"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_main_option"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:src="@mipmap/main_take_video" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/take_video"
                            android:textColor="#333333"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_analytic_video"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_weight="1"
                        android:background="@drawable/btn_main_option"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:src="@mipmap/main_analytic_video" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/analytic_video"
                            android:textColor="#333333"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_video_model"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_weight="1"
                        android:background="@drawable/btn_main_option"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:src="@mipmap/main_video_model" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/video_model"
                            android:textColor="#333333"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_27"
                        android:text="@string/video_share_list_title"
                        android:textColor="@color/qmui_config_color_white"
                        android:textSize="17sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_share_video_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout> 