<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.wantupai.advertisements.login.view.DotArrayView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:columns="24"
            app:dotColor="#4CB1C7D4"
            app:dotDiam="@dimen/dp_4"
            app:dotSpace="@dimen/dp_4"
            app:lines="16" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_58"
            android:drawableLeft="@drawable/tag_login_title"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="30sp" />

        <View
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_84"
            android:background="@drawable/tag_login_center" />

        <com.wantupai.advertisements.login.view.DotArrayView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_57"
            app:columns="24"
            app:dotColor="#4CB1C7D4"
            app:dotDiam="@dimen/dp_4"
            app:dotSpace="@dimen/dp_4"
            app:lines="16" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_64">

        <LinearLayout
            android:id="@+id/business_type_login"
            android:layout_width="@dimen/dp_116"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/btn_login_type"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_type_business" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_type_login"
                android:layout_marginLeft="@dimen/dp_6"
                android:textColor="@color/qmui_config_color_white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_type_login"
            android:layout_width="@dimen/dp_116"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@id/business_type_login"
            android:background="@drawable/btn_login_type"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_type_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type_login"
                android:layout_marginLeft="@dimen/dp_6"
                android:textColor="@color/qmui_config_color_white"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/other_type_login"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_12"
            android:scaleType="center"
            android:src="@mipmap/logo_more" />

        <TextView
            android:id="@+id/login_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/business_type_login"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="12sp"
            tools:text="@string/login_disclaimer_hint" />
    </RelativeLayout>
</FrameLayout>