<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_26">

    <LinearLayout
        android:id="@+id/business_center_my_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/business_center_my_video" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/my_video"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_18"
            android:src="@mipmap/logo_right_flag" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/sp_17"
        android:background="#6E7F89" />

    <LinearLayout
        android:id="@+id/business_center_my_purse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/business_center_my_purse" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/my_purse"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_18"
            android:src="@mipmap/logo_right_flag" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/sp_17"
        android:background="#6E7F89" />

    <LinearLayout
        android:id="@+id/business_center_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/business_center_settings" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_18"
            android:src="@mipmap/logo_right_flag" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/sp_17"
        android:background="#6E7F89" />
</LinearLayout>